# nor-storage

./: Cargo.toml
examples/ex1/: Cargo.toml  main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs  prelude.rs
